--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,26 @@ html, div, footer, header{
 	background:#333;
 }
 
+#GUI{
+	padding:10px;
+	background:#333;
+	border-radius: 5px;
+	position:fixed;
+	top:20px;
+	left:20px;
+}
+
+#player_thirst{
+	color:blue;
+}
+
+#player_energy{
+	color:green;
+}
+
+#player_hunger{
+	color:yellow;
+}
 
 
 /* =================================== Responsive ========== */
