--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,18 @@
 
 body{
 	background:#222;
+	height: 100vh;
 }
 
 html, div, footer, header{
 	margin:0;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100%;
 }
 
 
@@ -31,13 +39,13 @@ html, div, footer, header{
 	width: 100%;
 	margin-top: 50px;
 	overflow: hidden;
+	display: flex;
+	justify-content: center;
 }
 
 .game_main{
-	margin-left:  auto;
-	margin-right: auto;
 	padding:15px;
-	width: 960px;
+	width: 980px;
 	outline: 1px solid #333;
 	background:#111;
 }
@@ -57,6 +65,47 @@ html, div, footer, header{
 	height: 540px;
 	color: red;
 }
+
+/* All About Cards */
+
+.item-wrapper {
+	position: absolute;
+	bottom: 8rem;
+	left: 0;
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+
+#items_list {
+	display: flex;
+	flex-direction: row;
+}
+
+.card {
+	max-width: 9rem;
+	border-radius: 1rem;
+	padding: 1rem;
+	margin: 0.5rem;
+}
+
+.drink-card {
+	background-color: cornflowerblue;
+}
+
+.food-card {
+	background-color: darkseagreen;
+}
+
+.card-header {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	margin-bottom: 1rem;
+	font-size: 1.5rem;
+}
+
+/* Game UI */
 
 .game_score{
 	float:left;
@@ -79,10 +128,6 @@ html, div, footer, header{
 	height: 100px;
 	width: 100%;
 	text-align: center;
-}
-
-.wrapper{
-	min-height: 600px;
 }
 
 .clear{
@@ -161,12 +206,7 @@ html, div, footer, header{
 }
 
 #Items{
-	position:fixed;
-	top:150px;
-	left:20px;
-	background:#111;
-	padding:20px;
-	border-radius: 5px;
+
 }
 
 #item_template{
