--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ html, div, footer, header{
 
 .game_container{
 	width: 100%;
+	height: 100%;
 	margin-top: 50px;
 	overflow: hidden;
 	display: flex;
@@ -121,7 +122,6 @@ html, div, footer, header{
 }
 
 .footer{
-	position: absolute;
 	bottom: -0px;
 	margin-top:50px;
 	background:#111;
@@ -140,6 +140,13 @@ html, div, footer, header{
 
 .footer .content{
 	color: #555;
+}
+
+.network-menu-footer {
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .header h1{
